2015-04-14  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/65761
	* cfgrtl.c (rtl_split_edge): For EDGE_CROSSING split, use
	get_last_bb_insn (after) instead of NEXT_INSN (BB_END (after)).

2015-04-13  Jan Hubicka  <hubicka@ucw.cz>
	    Gerald Pfeifer  <gerald@pfeifer.com>

	* doc/contrib.texi (Contributors): Add Martin Jambor and
	Michael Matz.

2015-04-12  Jakub Jelinek  <jakub@redhat.com>

	* BASE-VER: Set to 5.0.1.
	* DEV-PHASE: Set to prerelease.

	PR tree-optimization/65747
	* ipa-icf-gimple.c (func_checker::compare_operand): Use compare_operand
	rather than compare_ssa_name for OBJ_TYPE_REF_OBJECT.

2015-04-12  Gerald Pfeifer  <gerald@pfeifer.com>

	* doc/invoke.texi (-Wmemset-transposed-args): Break a long
	sentence.  Improve grammar.

2015-04-12  Gerald Pfeifer  <gerald@pfeifer.com>

	* doc/contrib.texi (Contributors): Add Maxim Kuvyrkov.

2015-04-11  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/65743
	* ipa-inline-transform.c (speculation_removed): Remove static var.
	(check_speculations): New function.
	(clone_inlined_nodes): Do not check spculations.
	(inline_call): Call check_speculations.
	* ipa-prop.c (ipa_make_edge_direct_to_target): Do not
	consider non-invariants.

2015-04-11  Jan Hubicka  <hubicka@ucw.cz>
	    Martin Liska  <mliska@suse.cz>

	PR ipa/65722
	* ipa-icf.c (sem_item::compare_cgraph_references): function and
	variable can not match.
	(sem_item::update_hash_by_addr_refs): Fix handling of virtual tables.
	(sem_variable::equals_wpa): Fix checking of DECL_FINAL_P patch.

2015-04-11  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/65735
	* tree-ssa-threadedge.c (fsm_find_control_statement_thread_paths):
	Remove visited_phis argument, add visited_bbs, avoid recursing into the
	same bb rather than just into the same phi node.
	(thread_through_normal_block): Adjust caller.

2015-04-11  Gerald Pfeifer  <gerald@pfeifer.com>

	* doc/contrib.texi (Contributors): Add Ira Rosen.

2015-04-11  Benno Schulenberg  <bensberg@justemail.net>
